# cli/src/api/open-api/api.ts
@@ -485,6 +485,12 @@ export interface AssetBulkUpdateDto {
     'longitude'?: number;
     /**
      * 
+     * @type {number}
+     * @memberof AssetBulkUpdateDto
+     */
+    'orientation'?: number;
+    /**
+     * 
      * @type {boolean}
      * @memberof AssetBulkUpdateDto
      */
@@ -4191,6 +4197,12 @@ export interface UpdateAssetDto {
      * @memberof UpdateAssetDto
      */
     'longitude'?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof UpdateAssetDto
+     */
+    'orientation'?: number;
 }
 /**
  * 
