# server/src/domain/job/job.interface.ts
@@ -39,4 +39,5 @@ export interface ISidecarWriteJob extends IEntityJob {
   dateTimeOriginal?: string;
   latitude?: number;
   longitude?: number;
+  orientation?: number;
 }
